[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/Level_2.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Inventory/PlayerHotbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Inventory/PlayerInventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/playerStatBars.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utility/MonsterSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game.gd" type="Script" id=7]
[ext_resource path="res://UI/UI.gd" type="Script" id=8]

[node name="Main" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="PlayerInventory" parent="UI" instance=ExtResource( 3 )]
visible = false
position = Vector2( 88, 40 )

[node name="ChestInventory" parent="UI" instance=ExtResource( 3 )]
visible = false
position = Vector2( 280, 40 )

[node name="playerStatBars" parent="UI" instance=ExtResource( 4 )]
position = Vector2( 184, 24 )

[node name="PlayerHotbar" parent="UI" instance=ExtResource( 2 )]
position = Vector2( 88, 24 )

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Level_2" parent="Game" instance=ExtResource( 1 )]

[node name="Player" parent="Game" instance=ExtResource( 5 )]
position = Vector2( -32, 168 )

[node name="MonsterSpawner" parent="Game" instance=ExtResource( 6 )]
position = Vector2( 224, 0 )
